--- a/TrUCU/src/main/resources/application.properties
+++ b/TrUCU/src/main/resources/application.properties
@@ -7,7 +7,7 @@ trucu.db.user=trucu
 trucu.db.password=Bdtrucu123
 
 # ANGULAR FRONT
-trucu.front.open=false
+trucu.front.open=true
 trucu.front.initialPage=/home
 trucu.front.url.local=http://localhost:4200
 trucu.front.url.firebase=https://trucu-aa53f.web.app
